@@ -1,3 +1,7 @@
+ECM-Team highlighted in MRL news for radiation detection with ceramics
+April 1, 2024
+Prof. Rupp and team have been featured in <a href="https://mrl.mit.edu/node/254" target="_blank">MRL News</a> for discovering a fundamentally new way to detect radiation with ceramics (<a href="https://onlinelibrary.wiley.com/doi/10.1002/adma.202309253?af=R" target="_blank">article here</a>).
+
 Prof. Rupp's announced as Member of the National Academy of Science Leopoldina
 February 25, 2024
 We are honored to announce Prof. Rupp's recent induction into the Leopoldina, the National Academy of Sciences in Germany. This prestigious recognition is a testament to Prof. Rupp's pioneering contributions to the scientific community and her relentless pursuit of knowledge. The Leopoldina is renowned for its role in promoting science for the benefit of society, and Prof. Rupp's inclusion highlights her significant impact in her field. Join us in celebrating this remarkable achievement!
